# Sims2DECOMP

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  candidates.txt  candidates_dvd.txt  candidates_temp.txt  matched_addrs_temp.txt
.github/workflows/: build.yml
build_pc2/: CMakeCache.txt  Makefile
config/: ldscript.lcf  splits.txt  symbols.txt
docs/: register-matching-recipes.md
docs/tracking/: decomp-matrix.txt  failed-matches.md  funcs_12b.txt  next-steps.md  progress.md  tu_work_queue.txt
include/: stub_classes.h  types.h
include/animation/: sanimator2.h
include/build_mode/: interactor.h  wallmanipulator.h
include/camera/: esimscam.h
include/classes/: CasSimRendererDynamic.h  ChainResFile.h  EFrameAllocGroup.h  EIFenceWall.h  EQuat.h  ERFlash.h  EResLoaderMsgQueue.h  ESimsApp.h  EyeToyClient.h  FAMTarget.h  InLevelBaseState.h  ResourceBehavior.h  TextFormat.h
include/core/: e_mat4.h  e_string.h  eaheap.h  influencemap.h  loadingscreen.h  movieplayer.h
include/render/: e_graphics.h  e_rc.h  e_shader.h
include/sim/: wantfear.h
include/templates/: stl_types.h  tarray_types.h
src/animation/: animtable_stubs.cpp  animtableimpl_stubs.cpp  eanimcontroller_stubs.cpp  eanimmanager_stubs.cpp  eanimnodedatapos_stubs.cpp  sanimator2_decomp.cpp  sanimator2_stubs.cpp  sanimator_stubs.cpp
src/asm_decomp/: AptCharacterAnimation.cpp  AptCharacterMorphInst.cpp  AptError.cpp  AptShaderWord.cpp  CBMemberTranslator1_L_ERC_ptr_O2TTarget_void_UIObjectBase_ptr_UIObjectBase_ptr_ERC_ptr_R.cpp  CBMemberTranslator2_L_char_ptr_char_ptr_BBHTarget_void_BBHTarget_ptr_BBHTarget_ptr_char_pt_dd8375ab.cpp  CBMemberTranslator2_L_char_ptr_char_ptr_R2LTarget_void_R2LTarget_ptr_R2LTarget_ptr_char_pt_9d995658.cpp  EFontData.cpp  EIAmbLight.cpp  EIDirLight.cpp  EIFloor.cpp  EIGameInstance.cpp  EILight.cpp  EIPointAmbLight.cpp  EIPointLight.cpp  EIPortalPointLight.cpp  EISpotLight.cpp  EIStaticModel.cpp  EIStaticSubModel.cpp  EInstance.cpp  ENgcTextureC8.cpp  ENgcTextureCMPR.cpp  ERAmbientScore.cpp  ERAnim.cpp  ERBinary.cpp  ERCharacter.cpp  ERDataset.cpp  ERLevel.cpp  ERSoundEvent.cpp  ERSoundTrackData.cpp  ESemaphore.cpp  GetVar_SaveStatus.cpp  InteractorModule.cpp  LogInteraction.cpp  LogInteractionSample.cpp  Motives.cpp  ProtectedAllocPool.cpp  RELTarget.cpp  REffectsEmitter.cpp  REffectsSequencer.cpp  (+5 more)
src/asm_wrappers/: ACTTarget_asm_leaf.cpp  ActionMenu_asm_leaf.cpp  ActionMenu_auto.cpp  ActionMenu_call_converted.cpp  ActionMenu_rawbyte.cpp  ActionMenu_rawbyte_auto.cpp  ActionQueueHUD_call_converted.cpp  ActionQueue_call_converted.cpp  Add1Byte_unsigned_char_ptrr_rawbyte_auto.cpp  Add2Bytes_unsigned_char_ptrr_rawbyte_auto.cpp  AllocPoolManager_L_FastAllocPool_R_rawbyte.cpp  AllocPoolManager_L_FastAllocPool_R_rawbyte_auto.cpp  AllocPoolManager_L_ProtectedAllocPool_R_rawbyte.cpp  AllocPoolManager_L_ProtectedAllocPool_R_rawbyte_auto.cpp  AmbientScorePlayer_auto.cpp  AmbientScorePlayer_call_converted.cpp  AmbientScorePlayer_rawbyte.cpp  AmbientScorePlayer_rawbyte_auto.cpp  AmbientSoundPlayer_call_converted.cpp  AmbientSoundPlayer_ctor_auto.cpp  AmbientSoundPlayer_rawbyte.cpp  AnimTableImpl_branch_auto.cpp  AnimTableImpl_med_auto.cpp  AnimTableImpl_rawbyte.cpp  AnimTableImpl_rawbyte_auto.cpp  AptActionInterpreter_asm_leaf.cpp  AptActionInterpreter_rawbyte_auto.cpp  AptAnimationPoolData_rawbyte_auto.cpp  AptArray_rawbyte.cpp  AptAuxPCEorGL_PlaySavedInputs_char_ptr_rawbyte_auto.cpp  AptBoolean_asm_leaf.cpp  AptBoolean_call_converted.cpp  AptBoolean_rawbyte_auto.cpp  AptCIH_asm_leaf.cpp  AptCIH_call_converted.cpp  AptCIH_rawbyte.cpp  AptCIH_rawbyte_auto.cpp  AptCharacterAnimation_asm_leaf.cpp  (+1852 more)
tools/: auto_match.py  auto_match_medium.py  batch_12b.py  batch_12b_continue.py  batch_match_trivial.py  batch_verify_q4.sh  compare_obj_vs_dol.py  convert_call_wrappers.py  convert_leaf_funcs.py  decomp_agent.py  extract_asm_leaf_large.py  extract_asm_leaf_matches.py  fix_compile_errors.py  gen_12byte.py  gen_12byte_matches.py  gen_8byte_matches.py  gen_headers.py  gen_raw_byte_matches.py  gen_skeleton.py  gen_wrapper_matches.py  inject_matches.py  launch-workers.ps1  make_asm_match.py  mass_convert_leafs.py  progress.py  tu_match.py  verify_batch.py  verify_match.sh
(+19991 files in other folders)
